# OshaEvaluator

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts
attached_assets/: Dockerfile_1751496674816  main_1751496644055.py  model_1751496644055.py  nli_subapp_1751496644056.py  pyproject_1751496674817.toml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/ui/: expandable-text.tsx  file-upload.tsx  navigation.tsx
client/src/lib/: utils.ts
client/src/pages/: about.tsx  home.tsx
osha_app/src/: model.py  nli_subapp.py  runner.py
osha_app/src/qdrant_data/: meta.json
server/: index.ts  routes.ts  vite.ts
